Fixed list spacing (#724)
Thanks @fastidious

Reviewed-on: https://git.mills.io/yarnsocial/yarn/pulls/724
Co-committed-by: Phil S. <ullarah@noreply@mills.io>

--- a/internal/theme/static/css/99-yarn.css
+++ b/internal/theme/static/css/99-yarn.css
@@ -346,6 +346,11 @@ div .p-summary:not(.image-gallery)>.caption-wrap .caption {
   text-overflow: ellipsis;
 }
 
+.p-summary ul li,
+.p-summary ol li {
+  margin: 0 0.5rem;
+}
+
 .p-summary br {
   display: none;
 }
